[tool.poetry]
name = "django-api"
version = "0.1.0"
description = "Project to polish Django skills"
authors = ["fazalul92 <fazalul92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
